Import of PERLANCAR/DBIx-Diff-Schema-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Diff-Schema
gitpan-cpan-version:      0.06
gitpan-cpan-path:         PERLANCAR/DBIx-Diff-Schema-0.06.tar.gz
gitpan-cpan-author:       PERLANCAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-Diff-Schema
 
+0.06    2015-05-20 (PERLANCAR)
+
+	- Skip index when listing tables.
+
+
 0.05    2015-04-24 (PERLANCAR)
 
         - Add functions: db_schema_eq(), table_schema_eq().
