--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for DBIx-Diff-Schema
 
+0.07    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.06    2015-05-20 (PERLANCAR)
 
 	- Skip index when listing tables.
